--- a/angular/stylesheets/blawg.css
+++ b/angular/stylesheets/blawg.css
@@ -1,3 +1,7 @@
+ul {
+  list-style-type: none;
+}
+
 .blawg-title {
   display: block;
   font-size: 1.5em;
@@ -43,6 +47,5 @@ a.blawg-display-all {
   }
 
   .blawg-pagination ul {
-    list-style-type: none;
     margin: auto;
   }
